# xde-theme-atc

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  README.md.in  RELEASE  THANKS  configure.ac  configure.template  index.md
images/: tower.ppm
theme/: style  theme.ini  themerc
theme/adwm/: themerc
